--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,7 +8,9 @@
   </head>
   <body>
     <p>タイトル</p>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <div id="root0"></div>
+    <script type="module" src="../src/main.jsx"></script>
+    <div id="root1"></div>
+    <script type="module" src="../src/main.jsx"></script>
   </body>
 </html>
