250528_問題文引用

--- a/client/index.html
+++ b/client/index.html
@@ -5,10 +5,14 @@
     <meta charset="UTF-8" />
     <title>My React App</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script type="module" src="./src/main.jsx"></script>
   </head>
   <body>
-    <p>タイトル</p>
-    <div id="root"></div>
-    <script type="module" src="./src/main.jsx"></script>
+    <p>問題表示</p>
+    <div id="root_AtCoderProblemDraw"></div>
+    <p>メモ</p>
+    <div id="root_Draw"></div>
+    
+    
   </body>
 </html>
